# balances-service

./: Cargo.toml  README.md  config.yaml
src/: error.rs  main.rs  service.rs  tracing.rs
src/api/: error.rs  mod.rs  server.rs
src/api/routes/: custom_asset_balances.rs  mod.rs  native_asset_balances.rs
src/config/: mod.rs
src/node_clients/: config.rs  mod.rs
src/node_clients/evm/: config.rs  mod.rs
src/node_clients/waves/: config.rs  mod.rs
