[package]
name = "balances-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.1.0", default-features = false, features = ["macros", "actix-macros", "actix-web-codegen"] }
anyhow = "1.0.58"
async-trait = "0.1.56"
pepe-config = "0.0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.81" }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tracing-actix-web = "0.6"
actix-server = "2.1.1"
mime = "0.3.16"
serde_qs = { version = "0.9.2", features = ["actix4"] }
ethers-providers = { version = "0.13.0", default-features = false }
url = "2.2.2"
ethers-core = "0.13.0"
rustc-hex = "2.1.0"
ethabi = "17.1.0"
futures = "0.3.21"
